@@ -1,5 +1,6 @@
 ---version 2.0.2 released---
 
+11-aug-2008 - zeromus - SF [ 2046985 ] SRAM not wiped on power cycle (during movies)
 11-aug-2008 - zeromus - restore IPS patching capability which was lost when archive support was added
 11-aug-2008 - zeromus - SF [ 2011550 ] Buffer overflow (change vsprintf to vsnprintf)
 11-aug-2008 - zeromus - SF [ 2047004 ] Moviefilenames without extension don't automatically get fm2
